--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,7 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
+# for fastcgi # RewriteRule ^(.*)$ index.php?/$1 [L]
 
 </IfModule>
 
