set .htaccess for fastcgi

--- a/.htaccess
+++ b/.htaccess
@@ -10,8 +10,8 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
-# for fastcgi # RewriteRule ^(.*)$ index.php?/$1 [L]
+# RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteRule ^(.*)$ index.php?%{QUERY_STRING} [L]
 
 </IfModule>
 
